--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,6 @@
     <jakarta-validation-api.version>3.0.2</jakarta-validation-api.version>
     <joda-time.version>2.12.6</joda-time.version>
     <migbase64.version>2.2</migbase64.version>
-    <pojomatchers.version>2.0.1</pojomatchers.version>
     <springfox.version>3.0.0</springfox.version>
     <swagger-annotations.version>2.2.20</swagger-annotations.version>
     <swagger-codegen-maven-plugin.version>2.4.39</swagger-codegen-maven-plugin.version>
@@ -49,6 +48,11 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-mongodb</artifactId>
     </dependency>
 
     <dependency>
@@ -87,6 +91,7 @@
       <artifactId>springfox-swagger-ui</artifactId>
       <version>${springfox.version}</version>
     </dependency>
+
     <dependency>
       <groupId>io.springfox</groupId>
       <artifactId>springfox-bean-validators</artifactId>
@@ -138,9 +143,8 @@
     </dependency>
 
     <dependency>
-      <groupId>uk.gov.dwp.integration.pojomatchers</groupId>
-      <artifactId>pojomatchers</artifactId>
-      <version>${pojomatchers.version}</version>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -168,28 +172,26 @@
             </goals>
             <configuration>
               <inputSpec>${swagger.file}</inputSpec>
-              <ignoreFileOverride>${project.basedir}/.swagger-codegen-ignore</ignoreFileOverride>
               <generateApis>true</generateApis>
-              <generateApiDocumentation>true</generateApiDocumentation>
-              <generateApiTests>true</generateApiTests>
               <generateModels>true</generateModels>
-              <generateModelDocumentation>true</generateModelDocumentation>
-              <generateModelTests>true</generateModelTests>
               <generateSupportingFiles>false</generateSupportingFiles>
-              <apiPackage>com.TCDZH.api.server.controller</apiPackage>
-              <modelPackage>com.TCDZH.api.server.domain</modelPackage>
               <language>spring</language>
-              <output>target/generated-sources</output>
-              <!-- pass any necessary config options -->
+
               <configOptions>
-                <dateLibrary>java11</dateLibrary>
-                <java11>true</java11>
+
+                <basePackage>com.TCDZH</basePackage>
+                <apiPackage>com.TCDZH.api.server.controller</apiPackage>
+                <modelPackage>com.TCDZH.api.server.domain</modelPackage>
                 <jakarta>true</jakarta>
-                <useBeanValidation>true</useBeanValidation>
-                <performBeanValidation>true</performBeanValidation>
-                <swaggerDocketConfig>false</swaggerDocketConfig>
+                <interfaceOnly>true</interfaceOnly>
+                <sourceFolder>src/main/java</sourceFolder>
+                <hideGenerationTimestamp>true</hideGenerationTimestamp>
+                <dateLibrary>java11</dateLibrary>
+                <ignoreUnknownJacksonAnnotation>true</ignoreUnknownJacksonAnnotation>
                 <notNullJacksonAnnotation>true</notNullJacksonAnnotation>
-                <delegatePattern>true</delegatePattern>
+                <dateLibrary>false</dateLibrary>
+                <useBeanValidation>true</useBeanValidation>
+                <serializableModel>true</serializableModel>
               </configOptions>
               <configHelp>false</configHelp>
               <library>spring-boot</library>
