added models for Card and Game Created functonality for CreateGame and Join game

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/45Game
+spring.data.mongodb.uri=mongodb://localhost:27017/Game45
+server.port=8081
