--- a/pom.xml
+++ b/pom.xml
@@ -40,11 +40,6 @@
       <version>${swagger-annotations.version}</version>
     </dependency>
 
-<!--    <dependency>-->
-<!--      <groupId>org.springframework.boot</groupId>-->
-<!--      <artifactId>spring-boot-starter-tomcat</artifactId>-->
-<!--    </dependency>-->
-
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
@@ -55,11 +50,11 @@
       <artifactId>spring-boot-starter-data-mongodb</artifactId>
     </dependency>
 
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-web</artifactId>
-      <scope>provided</scope>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.springframework</groupId>-->
+<!--      <artifactId>spring-web</artifactId>-->
+<!--      <scope>provided</scope>-->
+<!--    </dependency>-->
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -75,22 +70,22 @@
     </dependency>
 
     <!-- JSON processing: jackson -->
-    <dependency>
-      <groupId>com.fasterxml.jackson.jaxrs</groupId>
-      <artifactId>jackson-jaxrs-base</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-annotations</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.jaxrs</groupId>
-      <artifactId>jackson-jaxrs-json-provider</artifactId>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>com.fasterxml.jackson.jaxrs</groupId>-->
+<!--      <artifactId>jackson-jaxrs-base</artifactId>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>com.fasterxml.jackson.core</groupId>-->
+<!--      <artifactId>jackson-core</artifactId>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>com.fasterxml.jackson.core</groupId>-->
+<!--      <artifactId>jackson-annotations</artifactId>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>com.fasterxml.jackson.jaxrs</groupId>-->
+<!--      <artifactId>jackson-jaxrs-json-provider</artifactId>-->
+<!--    </dependency>-->
 
     <dependency>
       <groupId>io.springfox</groupId>
@@ -111,16 +106,16 @@
     </dependency>
 
     <!-- Joda time: if you use it -->
-    <dependency>
-      <groupId>com.fasterxml.jackson.datatype</groupId>
-      <artifactId>jackson-datatype-joda</artifactId>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>com.fasterxml.jackson.datatype</groupId>-->
+<!--      <artifactId>jackson-datatype-joda</artifactId>-->
+<!--    </dependency>-->
 
-    <dependency>
-      <groupId>joda-time</groupId>
-      <artifactId>joda-time</artifactId>
-      <version>${joda-time.version}</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>joda-time</groupId>-->
+<!--      <artifactId>joda-time</artifactId>-->
+<!--      <version>${joda-time.version}</version>-->
+<!--    </dependency>-->
 
     <dependency>
       <groupId>org.apache.commons</groupId>
@@ -161,6 +156,7 @@
         <directory>src/main/resources</directory>
         <includes>
           <include>api.yaml</include>
+          <include>**/*.properties</include>
         </includes>
       </resource>
     </resources>
@@ -181,9 +177,7 @@
               <generateModels>true</generateModels>
               <generateSupportingFiles>false</generateSupportingFiles>
               <language>spring</language>
-
               <configOptions>
-
                 <basePackage>com.TCDZH</basePackage>
                 <apiPackage>com.TCDZH.api.server.controller</apiPackage>
                 <modelPackage>com.TCDZH.api.server.domain</modelPackage>
@@ -204,17 +198,12 @@
           </execution>
         </executions>
       </plugin>
-
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
       </plugin>
-
-
     </plugins>
   </build>
-
-
 
   <licenses>
     <license>
