--- a/pom.xml
+++ b/pom.xml
@@ -50,11 +50,10 @@
       <artifactId>spring-boot-starter-data-mongodb</artifactId>
     </dependency>
 
-<!--    <dependency>-->
-<!--      <groupId>org.springframework</groupId>-->
-<!--      <artifactId>spring-web</artifactId>-->
-<!--      <scope>provided</scope>-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-webflux</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -68,24 +67,6 @@
       <version>${jakarta-annotations.version}</version>
       <scope>compile</scope>
     </dependency>
-
-    <!-- JSON processing: jackson -->
-<!--    <dependency>-->
-<!--      <groupId>com.fasterxml.jackson.jaxrs</groupId>-->
-<!--      <artifactId>jackson-jaxrs-base</artifactId>-->
-<!--    </dependency>-->
-<!--    <dependency>-->
-<!--      <groupId>com.fasterxml.jackson.core</groupId>-->
-<!--      <artifactId>jackson-core</artifactId>-->
-<!--    </dependency>-->
-<!--    <dependency>-->
-<!--      <groupId>com.fasterxml.jackson.core</groupId>-->
-<!--      <artifactId>jackson-annotations</artifactId>-->
-<!--    </dependency>-->
-<!--    <dependency>-->
-<!--      <groupId>com.fasterxml.jackson.jaxrs</groupId>-->
-<!--      <artifactId>jackson-jaxrs-json-provider</artifactId>-->
-<!--    </dependency>-->
 
     <dependency>
       <groupId>io.springfox</groupId>
@@ -104,18 +85,6 @@
       <artifactId>springfox-bean-validators</artifactId>
       <version>${springfox.version}</version>
     </dependency>
-
-    <!-- Joda time: if you use it -->
-<!--    <dependency>-->
-<!--      <groupId>com.fasterxml.jackson.datatype</groupId>-->
-<!--      <artifactId>jackson-datatype-joda</artifactId>-->
-<!--    </dependency>-->
-
-<!--    <dependency>-->
-<!--      <groupId>joda-time</groupId>-->
-<!--      <artifactId>joda-time</artifactId>-->
-<!--      <version>${joda-time.version}</version>-->
-<!--    </dependency>-->
 
     <dependency>
       <groupId>org.apache.commons</groupId>
